fixing vertical overflow option

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,7 @@
 
 body {
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 .container-fluid {
     padding-left: 0;
